tests/ui/errors/com_dyn_classes.stderr
error[E0618]: expected function, found `bool`
  --> tests/ui/errors/com_dyn_classes.rs:16:30
   |
16 |         AComponent class:red=true;
   |                              ^^^^ call expression requires function

error[E0308]: mismatched types
  --> tests/ui/errors/com_dyn_classes.rs:22:30
   |
22 |         AComponent class:red=["not this"];
   |                              ^^^^^^^^^^^^
   |                              |
   |                              expected `bool`, found `&str`
   |                              arguments to this function are incorrect
   |
note: method defined here
  --> $RUST/core/src/bool.rs
   |
   |     pub fn then_some<T>(self, t: T) -> Option<T> {
   |            ^^^^^^^^^

error[E0599]: no method named `class` found for struct `EmptyPropsBuilder` in the current scope
  --> tests/ui/errors/com_dyn_classes.rs:34:23
   |
33 |       _ = mview! {
   |  _________-
34 | |         Nothing class:red=[true];
   | |                      -^^^ method not found in `EmptyPropsBuilder`
   | |______________________|
   |

error[E0599]: no method named `class` found for struct `EmptyPropsBuilder` in the current scope
  --> tests/ui/errors/com_dyn_classes.rs:40:17
   |
39 |       _ = mview! {
   |  _________-
40 | |         Nothing.red;
   | |                -^^^ method not found in `EmptyPropsBuilder`
   | |________________|
   |

error[E0599]: no method named `id` found for struct `EmptyPropsBuilder` in the current scope
  --> tests/ui/errors/com_dyn_classes.rs:46:18
   |
45 |       _ = mview! {
   |  _________-
46 | |         Nothing #unique;
   | |                 -^^^^^^ method not found in `EmptyPropsBuilder`
   | |_________________|
   |
